maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:4: error: identifier expected but 'while' found.
	while (!estSurBiscuit()) {
        ^Escaper:12: error: ':' expected but '}' found.
}
^