maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
def keepHandOnSideWall() (
	while (!estSurBiscuit()) {
		if (estFaceMur()) {
			gauche()
		}
		else {avance()}
	}
)
keepHandOnSideWall()
}
